Bug 478255 - localization bar (URL) does not get compressed with small window size
Summary: localization bar (URL) does not get compressed with small window size
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-08 11:25 UTC by avlas
Modified: 2023-12-22 18:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avlas 2023-12-08 11:25:49 UTC
Since kf6 branch got merged into master the status of the sidebar view is not respected (you enable, restart konqueror, and sidebar is not there, even though the space for it is there).

Another issue is that the localization bar (URL) does not get compressed as it used to when the window size is small. Now  other icons get replaced by extending buttons with the symbol ">". Is there a way to come back to previous behavior?

Thanks!
Comment 1 avlas 2023-12-08 11:57:35 UTC
I went back with git checkout to the different commits and somehow the sidebar is now working fine (I cannot reproduce it anymore) so it would be only the issue about the URL bar
Comment 2 avlas 2023-12-11 08:25:42 UTC
The issue with the sidebar returned. Unsure what triggers it but the active status is not hold and more and more space is created for the sidebars when reactivated (loops of open konqueror, reactivate the sidebar, close konqueror and open again). After this, if you go back with git checkout to the commit previous to the kf6 merge you can see several sidebars being active.
Comment 3 Stefano Crocco 2023-12-15 14:49:13 UTC
(In reply to avlas from comment #2)
> The issue with the sidebar returned. Unsure what triggers it but the active
> status is not hold and more and more space is created for the sidebars when
> reactivated (loops of open konqueror, reactivate the sidebar, close
> konqueror and open again). After this, if you go back with git checkout to
> the commit previous to the kf6 merge you can see several sidebars being
> active.

Are you testing with KF5 or KF6? I just discovered a bug which would cause (among other things) the sidebar not to load in KF6. There's a merge request for it at https://invent.kde.org/network/konqueror/-/merge_requests/265
Comment 4 avlas 2023-12-15 15:01:59 UTC
I use kf5. See the effect here: https://i.imgur.com/PbJLzDQ.png

The way to show this is: activate the sidebar and restart konqueror
Comment 5 Stefano Crocco 2023-12-15 15:18:28 UTC
(In reply to avlas from comment #4)
> I use kf5. See the effect here: https://i.imgur.com/PbJLzDQ.png
> 
> The way to show this is: activate the sidebar and restart konqueror

Just to be clear, is this what you mean?
- open Konqueror
- turn on "Show sidebar"
- close Konqueror
- start Konqueror again. The sidebar is not visible anymore
- turn on "Show sidebar" again. The sidebar doesn't become visibile but the space of the main view is reduced to make place for it.

If It is so, I can't reproduce your issue. Or rather, I can confirm that the sidebar status isn't remembered from one session to the next (which shouldn't happen), but toggling it on again works correctly.

Regarding the location bar issue, I found the cause and created a merge request for it: https://invent.kde.org/network/konqueror/-/merge_requests/266
Comment 6 avlas 2023-12-15 15:25:12 UTC
(In reply to Stefano Crocco from comment #5)
> (In reply to avlas from comment #4)
> > I use kf5. See the effect here: https://i.imgur.com/PbJLzDQ.png
> > 
> > The way to show this is: activate the sidebar and restart konqueror
> 
> Just to be clear, is this what you mean?
> - open Konqueror
> - turn on "Show sidebar"
> - close Konqueror
> - start Konqueror again. The sidebar is not visible anymore
> - turn on "Show sidebar" again. The sidebar doesn't become visibile but the
> space of the main view is reduced to make place for it.
> 
> If It is so, I can't reproduce your issue. Or rather, I can confirm that the
> sidebar status isn't remembered from one session to the next (which
> shouldn't happen), but toggling it on again works correctly.
> 
> Regarding the location bar issue, I found the cause and created a merge
> request for it: https://invent.kde.org/network/konqueror/-/merge_requests/266

What I mean is that when konqueror restarts the sidebar is not seen but the space for it is there. You then can reactivate the sidebar and it appears. 

If you repeat the cycle, the empty space grows 1 sidebar-length each time, accumulating space for sidebar after sidebar. In fact, if you then checkout to the commit previous to kf6 and open konqueror, you can see n sidebars one after the other.
Comment 7 avlas 2023-12-15 15:25:43 UTC
> Regarding the location bar issue, I found the cause and created a merge
> request for it: https://invent.kde.org/network/konqueror/-/merge_requests/266


Awesome!
Comment 8 avlas 2023-12-15 15:29:48 UTC
> What I mean is that when konqueror restarts the sidebar is not seen but the
> space for it is there. You then can reactivate the sidebar and it appears. 
> 
> If you repeat the cycle, the empty space grows 1 sidebar-length each time,
> accumulating space for sidebar after sidebar. In fact, if you then checkout
> to the commit previous to kf6 and open konqueror, you can see n sidebars one
> after the other.

If you cannot reproduce this, try with the setting that restores tabs on startup
Comment 9 Stefano Crocco 2023-12-15 15:40:08 UTC
(In reply to avlas from comment #8)
> > What I mean is that when konqueror restarts the sidebar is not seen but the
> > space for it is there. You then can reactivate the sidebar and it appears. 
> > 
> > If you repeat the cycle, the empty space grows 1 sidebar-length each time,
> > accumulating space for sidebar after sidebar. In fact, if you then checkout
> > to the commit previous to kf6 and open konqueror, you can see n sidebars one
> > after the other.
> 
> If you cannot reproduce this, try with the setting that restores tabs on
> startup

Ok. Now I can reproduce the issue. I'll try to find out the cause
Comment 10 Bug Janitor Service 2023-12-15 17:55:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/267
Comment 11 Stefano Crocco 2023-12-22 18:50:46 UTC
Git commit 94feeeec7bef391c3e48d9c8f884bb0a68e1c7ea by Stefano Crocco.
Committed on 22/12/2023 at 19:50.
Pushed by stefanocrocco into branch 'master'.

Don't delay loading of views which aren't in the tab container

Delay loading of views which aren't in the tab container doesn't make sense because they are always visible. Besides, it didn't work because they were never actually loaded.

M  +56   -4    src/konqviewmanager.cpp
M  +12   -0    src/konqviewmanager.h

https://invent.kde.org/network/konqueror/-/commit/94feeeec7bef391c3e48d9c8f884bb0a68e1c7ea