Don't delay loading of views which aren't in the tab container

Delay loading of views which aren't in the tab container doesn't make sense because they are always visible. Besides, it didn't work because they were never actually loaded.

BUG: 478255